# model-serving-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20251019201228662_add_model_and_usage_table.py
app/: database.py  main.py  models.py
app/api/: __init__.py  healthz.py  ocr.py  usage.py
app/core/: database.py
app/entity/: ocr.py  usage.py
app/entity/controller/: healthz.py  usage.py
app/entity/use_case/: ocr.py  usage.py
app/repository/: __init__.py  model_repository.py
app/repository/model/: __init__.py  model.py  register.py
app/repository/usage/: __init__.py  register.py  usage.py
app/service/: ocr.py
app/use_case/ocr/: __init__.py  ocr.py  register.py
app/use_case/usage/: __init__.py  register.py  usage.py
script/localstack-init/: init-sqs.sh
